--- a/tongue_twister.html
+++ b/tongue_twister.html
@@ -9,6 +9,16 @@
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
+      rel="stylesheet"
+    />
     <title>Tongue Twister</title>
   </head>
   <body>
@@ -35,7 +45,7 @@
 
     <div id="end-screen">
       <h1>Result</h1>
-      <p>rank&nbsp;<span id="rank"></span></p>
+      <p>Rank&nbsp;<span id="rank"></span></p>
       <button id="play-again">Play again</button>
     </div>
     <!-- 
