--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="tongue_twister.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
       rel="stylesheet"
@@ -56,6 +56,6 @@
         10 --- S
      -->
 
-    <script type="text/javascript" src="tongue_twister.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
